# Statistical-arbitration

./: .gitignore  README.md  pyproject.toml
Lab10/: Lab.I.100.raw.ipynb  Lab.I.101.raw.ipynb  Lab.I.102.ipynb
Lab11/: Lab110g.py  Lab111.py  Lab112.ipynb
Lab3/: Lab.I.32.ipynb  Lab3-2.py  Lab3.py  main.py
Lab4/: HW4.py  Lab.I.43_raw.ipynb
Lab5/: Lab.H.I.52.ipynb  Lab.I.50.raw.ipynb  Lab.I.51.raw.ipynb  helper.py
Lab5/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Lab5/catboost_info/learn/: events.out.tfevents
Lab6/: Lab.I.60.raw.ipynb
Lab7/: Lab7_0.py
Lab7/Lab7_1/: Dockerfile  runapp.sh
Lab7/Lab7_1/app-src/: app.py  requirements.txt
Lab8/: Lab8_0.py  Lab8_1.py  Lab8_2.py  data-i.81.csv
kolokwium/: kolokiwum.py  kolokwium-dane-0912.csv  kolokwium.ipynb
