[project]
name = "arbitraz"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "en-core-web-sm",
    "google-generativeai>=0.8.5",
    "grpcio==1.60.1",
    "ibm-watsonx-ai>=1.4.2",
    "lightgbm>=4.6.0",
    "notebook>=7.4.7",
    "numpy==1.26.4",
    "pandas-stubs==2.3.2.250926",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "scikit-plot>=0.3.7",
    "scipy==1.11.4",
    "spacy==3.7.1",
    "tables>=3.10.2",
    "typer[all]==0.9.0",
    "xgboost>=3.1.1",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl" }
